feat(quality): 導入 SonarQube 與 Strix 程式碼品質與安全掃描工具鏈並修復 23 項可靠性缺陷 (#72)
* feat(quality): 導入 SonarQube 與 Strix 程式碼品質與安全掃描工具鏈並修復 23 項可靠性缺陷

* fix(ci): 更新 Strix 預設模型為 gemini-3.6-flash 解決 API 404 棄用問題

* fix(security): 貫徹 Strix CI 受信任邊界、實作多金鑰池自動探測與防指令注入

* fix(ci): 修正 SonarQube step 條件語法並優化 Strix 腳本格式與例外處理

* fix(ci): 使用 urlencode 建構 Gemini 探測請求以避免靜態脫敏誤傷語法

* fix(ci): 將 SONAR_TOKEN 移至 job 級別 env 解決 GitHub Actions 語法錯誤